{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 103,
  "lineage": "55438147-cfb7-9fe6-7e18-7109056998e9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867344466595:vpc/vpc-06a9bbaabf911a997",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0edf99a7a8aadb458",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-01a906e36844f7b8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a9bbaabf911a997",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06f998e06dff3e6a4",
            "owner_id": "867344466595",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:867344466595:instance/i-0f9f4b231072119fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9f4b231072119fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08fe6631981b538c7"
              }
            ],
            "primary_network_interface_id": "eni-08fe6631981b538c7",
            "private_dns": "ip-172-31-24-63.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.63",
            "public_dns": "ec2-54-242-121-166.compute-1.amazonaws.com",
            "public_ip": "54.242.121.166",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b252819db573e4c4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "security-group-my-ip-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03626583a825e76e3",
            "tags": {
              "Name": "docker-server"
            },
            "tags_all": {
              "Name": "docker-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa173b72419e5952"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867344466595",
            "id": "i-0f9f4b231072119fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.my_ip_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:867344466595:instance/i-0efdb14f279adb181",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efdb14f279adb181",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09cd30536548271e5"
              }
            ],
            "primary_network_interface_id": "eni-09cd30536548271e5",
            "private_dns": "ip-172-31-22-166.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.166",
            "public_dns": "ec2-3-95-18-148.compute-1.amazonaws.com",
            "public_ip": "3.95.18.148",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e84570e77c7aaeb5",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "security-group-my-ip-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03626583a825e76e3",
            "tags": {
              "Name": "JenkinsServer"
            },
            "tags_all": {
              "Name": "JenkinsServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa173b72419e5952"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867344466595",
            "id": "i-0efdb14f279adb181",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.my_ip_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minikube-server-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:867344466595:instance/i-05c542e908a28aae3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c542e908a28aae3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fceabbb341483500"
              }
            ],
            "primary_network_interface_id": "eni-0fceabbb341483500",
            "private_dns": "ip-172-31-19-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.78",
            "public_dns": "ec2-34-233-124-155.compute-1.amazonaws.com",
            "public_ip": "34.233.124.155",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e4cf279b11d0a3d5",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "security-group-minikube",
              "security-group-my-ip-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03626583a825e76e3",
            "tags": {
              "Name": "minikube-server-2"
            },
            "tags_all": {
              "Name": "minikube-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0056495576abd4b30",
              "sg-0fa173b72419e5952"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "key_name"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867344466595",
            "id": "i-05c542e908a28aae3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.minikube",
            "aws_security_group.my_ip_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "minikube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867344466595:security-group/sg-0056495576abd4b30",
            "description": "kubernetes Server Access",
            "egress": [],
            "id": "sg-0056495576abd4b30",
            "ingress": [],
            "name": "security-group-minikube",
            "name_prefix": "",
            "owner_id": "867344466595",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-minikube"
            },
            "tags_all": {
              "Name": "sg-minikube"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a9bbaabf911a997"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867344466595",
            "id": "sg-0056495576abd4b30",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_ip_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867344466595:security-group/sg-0fa173b72419e5952",
            "description": "Allow SSH from my IP",
            "egress": [],
            "id": "sg-0fa173b72419e5952",
            "ingress": [],
            "name": "security-group-my-ip-ssh",
            "name_prefix": "",
            "owner_id": "867344466595",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-my-ip-ssh"
            },
            "tags_all": {
              "Name": "sg-my-ip-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a9bbaabf911a997"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867344466595",
            "id": "sg-0fa173b72419e5952",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "my_ip_ssh_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867344466595:security-group-rule/sgr-08ea6b4c86f7c1fde",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow All outbound",
            "from_port": 0,
            "id": "sgr-08ea6b4c86f7c1fde",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fa173b72419e5952",
            "security_group_rule_id": "sgr-08ea6b4c86f7c1fde",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867344466595",
            "id": "sgr-08ea6b4c86f7c1fde",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.my_ip_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867344466595:security-group-rule/sgr-0338b9bcc94789e23",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0338b9bcc94789e23",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fa173b72419e5952",
            "security_group_rule_id": "sgr-0338b9bcc94789e23",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867344466595",
            "id": "sgr-0338b9bcc94789e23",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.my_ip_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "jenkins_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867344466595:security-group-rule/sgr-0e42e542819536036",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0e42e542819536036",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fa173b72419e5952",
            "security_group_rule_id": "sgr-0e42e542819536036",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867344466595",
            "id": "sgr-0e42e542819536036",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.my_ip_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "minikube_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867344466595:security-group-rule/sgr-0610ba7957c1d4ae6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0610ba7957c1d4ae6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0056495576abd4b30",
            "security_group_rule_id": "sgr-0610ba7957c1d4ae6",
            "tags": null,
            "tags_all": {},
            "to_port": 30080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867344466595",
            "id": "sgr-0610ba7957c1d4ae6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.minikube",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "my_ip_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867344466595:security-group-rule/sgr-0778fc808e296adaf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH from my IP",
            "from_port": 22,
            "id": "sgr-0778fc808e296adaf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fa173b72419e5952",
            "security_group_rule_id": "sgr-0778fc808e296adaf",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867344466595",
            "id": "sgr-0778fc808e296adaf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.my_ip_ssh",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}